--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ repositories {
 dependencies {
     compileOnly "io.papermc.paper:paper-api:1.20.1-R0.1-SNAPSHOT"
     compileOnly "me.clip:placeholderapi:2.11.3"
-    compileOnly "com.iridium:IridiumColorAPI:1.0.6"
+    implementation "com.iridium:IridiumColorAPI:1.0.6"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
@@ -60,6 +60,7 @@ processResources {
 shadowJar {
     dependencies {
         include(dependency("org.jetbrains.kotlin:kotlin-stdlib"))
+        include(dependency("com.iridium:IridiumColorAPI:1.0.6"))
     }
 }
 kotlin {
