--- a/src/main/resources/stellarstars.yml
+++ b/src/main/resources/stellarstars.yml
@@ -93,7 +93,7 @@ prefixes:
   - 'Crew'
   - 'Crimson'
   - 'Forgotten'
-  - 'Bosses''s'
+  - 'Boss'''
   - 'Green Thumb'
   - 'Trooper'
   - 'Smash'
